bootstrap/ic-shared-minio/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bucket-creation
  labels:
    app: bucket-creation
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    openshift.io/display-name: "Bucket Creation"
    argocd.argoproj.io/sync-wave: "0"
