bootstrap/ic-shared-minio/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: minio
        args:
        - minio server /data --console-address :9001
        command:
        - /bin/bash
        - -c
        image: quay.io/minio/minio:RELEASE.2024-05-28T17-19-04
        ports:
        - containerPort: 9000
          protocol: TCP
          name: minio
        - containerPort: 9001
          protocol: TCP
          name: console
        resources:
          requests:
            cpu: 200m
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
        volumeMounts:
        - mountPath: /storage
          name: storage
      volumes:
      - persistentVolumeClaim:
          claimName: minio-pv-claim
        name: storage
