bootstrap/ic-shared-minio/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ports:
  - name: minio
    port: 9000
    targetPort: minio
  - name: console
    port: 9001
    targetPort: 9001
  selector:
    app: minio
  sessionAffinity: None
  type: ClusterIP
